# monochrome-font-generator-c

./: .gitignore  .typos.toml  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/: pull_request_template.md
.github/workflows/: ci.yml
nix/: build.nix  pre-commit.nix
src/: cli.c  cli.h  main.c  main.cpp
testsuites/: build.nix
testsuites/goldens/: .gitignore  Makefile  build.nix  main.c  output.pbm
testsuites/goldens/fixtures/: hello-newline.txt
testsuites/goldens/goldens/: hello-newline.pbm  pangram.pbm
testsuites/integration-golden/: main.c  render
testsuites/integration-valid-c/: build.nix  run-tests.sh
testsuites/integration-valid-c/test-cases/: 1.sh  2.sh
testsuites/valid-c/: build.nix  run-tests.sh
